[package]
name = "jammi_bev"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
rayon = "1.10.0"
image = "0.25.6"
